@@ -11,8 +11,6 @@ import org.apache.commons.logging.LogFactory;
 import org.hibernate.Criteria;
 import org.hibernate.HibernateException;
 import org.hibernate.Query;
-import org.hibernate.Session;
-//import org.hibernate.Transaction;
 import org.hibernate.criterion.Order;
 import org.hibernate.criterion.Restrictions;
 import org.i4change.app.data.basic.AuthLevelmanagement;
@@ -20,21 +18,19 @@ import org.i4change.app.data.basic.Configurationmanagement;
 import org.i4change.app.data.basic.beans.SearchResult;
 import org.i4change.app.data.domain.daos.OrganisationUserDaoImpl;
 import org.i4change.app.data.user.Addressmanagement;
-import org.i4change.app.dto.user.UserlevelDTO;
 import org.i4change.app.dto.user.UserOrgDTO;
-//import org.i4change.app.hibernate.beans.domain.Organisation;
+import org.i4change.app.dto.user.UserlevelDTO;
 import org.i4change.app.hibernate.beans.user.Userdata;
 import org.i4change.app.hibernate.beans.user.Userlevel;
 import org.i4change.app.hibernate.beans.user.Users;
-//import org.i4change.app.hibernate.utils.HibernateUtil;
 import org.i4change.app.utils.crypt.ManageCryptStyle;
 import org.springframework.orm.hibernate3.support.HibernateDaoSupport;
 
 public class UserDaoImpl extends HibernateDaoSupport {
-	 
+
 	private static final Log log = LogFactory.getLog(UserDaoImpl.class);
-	
-	//Spring managed Beans
+
+	// Spring managed Beans
 	private OrganisationUserDaoImpl organisationUserDaoImpl;
 	private ManageCryptStyle manageCryptStyle;
 	private Addressmanagement addressmanagement;
@@ -43,35 +39,40 @@ public class UserDaoImpl extends HibernateDaoSupport {
 	public Configurationmanagement getConfigurationmanagement() {
 		return configurationmanagement;
 	}
+
 	public void setConfigurationmanagement(
 			Configurationmanagement configurationmanagement) {
 		this.configurationmanagement = configurationmanagement;
 	}
-	
+
 	public OrganisationUserDaoImpl getOrganisationUserDaoImpl() {
 		return organisationUserDaoImpl;
 	}
+
 	public void setOrganisationUserDaoImpl(
 			OrganisationUserDaoImpl organisationUserDaoImpl) {
 		this.organisationUserDaoImpl = organisationUserDaoImpl;
 	}
-	
+
 	public ManageCryptStyle getManageCryptStyle() {
 		return manageCryptStyle;
 	}
+
 	public void setManageCryptStyle(ManageCryptStyle manageCryptStyle) {
 		this.manageCryptStyle = manageCryptStyle;
 	}
-	
+
 	public Addressmanagement getAddressmanagement() {
 		return addressmanagement;
 	}
+
 	public void setAddressmanagement(Addressmanagement addressmanagement) {
 		this.addressmanagement = addressmanagement;
 	}
-	
+
 	/**
 	 * query for a list of users
+	 * 
 	 * @param users_id
 	 * @param user_level
 	 * @param start
@@ -79,23 +80,26 @@ public class UserDaoImpl extends HibernateDaoSupport {
 	 * @param orderby
 	 * @return
 	 */
-	public SearchResult getUsersList(int start, int max, String orderby, boolean asc){
+	public SearchResult getUsersList(int start, int max, String orderby,
+			boolean asc) {
 		try {
-			
+
 			SearchResult sresult = new SearchResult();
 			sresult.setObjectName(Users.class.getName());
 			sresult.setRecords(this.selectMaxFromUsers());
-			//get all users
+			// get all users
 			Criteria crit = getSession().createCriteria(Users.class);
 			crit.add(Restrictions.eq("deleted", "false"));
-			if (asc) crit.addOrder(Order.asc(orderby));
-			else crit.addOrder(Order.desc(orderby));
+			if (asc)
+				crit.addOrder(Order.asc(orderby));
+			else
+				crit.addOrder(Order.desc(orderby));
 			crit.setMaxResults(max);
 			crit.setFirstResult(start);
 			List<Users> users = crit.list();
-			
+
 			LinkedList<UserOrgDTO> userOrgDTOs = new LinkedList<UserOrgDTO>();
-			for (int i = 0;i<users.size();i++) {
+			for (int i = 0; i < users.size(); i++) {
 				Users us = users.get(i);
 				UserOrgDTO userOrgDTO = new UserOrgDTO();
 				userOrgDTO.setLogin(us.getLogin());
@@ -104,47 +108,48 @@ public class UserDaoImpl extends HibernateDaoSupport {
 				userOrgDTO.setUser_id(us.getUser_id());
 				userOrgDTOs.add(userOrgDTO);
 			}
-			
+
 			sresult.setResult(userOrgDTOs);
-			return sresult;				
+			return sresult;
 		} catch (HibernateException ex) {
-			log.error("[getUsersList] ",ex);
+			log.error("[getUsersList] ", ex);
 		} catch (Exception ex2) {
-			log.error("[getUsersList] ",ex2);
+			log.error("[getUsersList] ", ex2);
 		}
 		return null;
 	}
-	
-	public SearchResult getUsersListByOrganization(int start, int max, String orderby, boolean asc, Long organization_id){
+
+	public SearchResult getUsersListByOrganization(int start, int max,
+			String orderby, boolean asc, Long organization_id) {
 		try {
-		
-			String hql = "SELECT c FROM Users c, Organisation_Users ou " +
-					"WHERE c.deleted!=:deleted " +
-					"AND ou.user_id = c.user_id " +
-					"AND ou.organisation.organisation_id = :organisation_id " +
-					"AND ou.deleted!=:deleted " +
-					"GROUP BY c.user_id " +
-					"ORDER BY "+orderby;
+
+			String hql = "SELECT c FROM Users c, Organisation_Users ou "
+					+ "WHERE c.deleted!=:deleted "
+					+ "AND ou.user_id = c.user_id "
+					+ "AND ou.organisation.organisation_id = :organisation_id "
+					+ "AND ou.deleted!=:deleted " + "GROUP BY c.user_id "
+					+ "ORDER BY " + orderby;
 			if (asc) {
-				hql +=" ASC";
+				hql += " ASC";
 			} else {
-				hql +=" DESC";
+				hql += " DESC";
 			}
-			
+
 			SearchResult sresult = new SearchResult();
 			sresult.setObjectName(UserOrgDTO.class.getName());
-			sresult.setRecords(this.selectMaxFromUsersByOrganization(organization_id));
-			
-			//get all users of this Organization
+			sresult.setRecords(this
+					.selectMaxFromUsersByOrganization(organization_id));
+
+			// get all users of this Organization
 			Query query = getSession().createQuery(hql);
 			query.setString("deleted", "true");
 			query.setLong("organisation_id", organization_id);
 			query.setMaxResults(max);
 			query.setFirstResult(start);
 			List<Users> users = query.list();
-			
+
 			LinkedList<UserOrgDTO> userOrgDTOs = new LinkedList<UserOrgDTO>();
-			for (int i = 0;i<users.size();i++) {
+			for (int i = 0; i < users.size(); i++) {
 				Users us = users.get(i);
 				UserOrgDTO userOrgDTO = new UserOrgDTO();
 				userOrgDTO.setLogin(us.getLogin());
@@ -153,98 +158,99 @@ public class UserDaoImpl extends HibernateDaoSupport {
 				userOrgDTO.setUser_id(us.getUser_id());
 				userOrgDTOs.add(userOrgDTO);
 			}
-			
+
 			sresult.setResult(userOrgDTOs);
-			return sresult;	
-			
+			return sresult;
+
 		} catch (HibernateException ex) {
-			log.error("[getUsersListByOrganization] ",ex);
+			log.error("[getUsersListByOrganization] ", ex);
 		} catch (Exception ex2) {
-			log.error("[getUsersListByOrganization] ",ex2);
+			log.error("[getUsersListByOrganization] ", ex2);
 		}
 		return null;
 	}
-	
-	public List<Users> getAllUsers(){
+
+	public List<Users> getAllUsers() {
 		try {
-			//get all users
+			// get all users
 			Criteria crit = getSession().createCriteria(Users.class);
 			crit.add(Restrictions.eq("deleted", "false"));
 			List<Users> ll = crit.list();
-			
-			return ll;				
-		} catch (HibernateException ex) {
-			log.error("[getAllUsers] ",ex);
-		} catch (Exception ex2) {
-			log.error("[getAllUsers] ",ex2);
-		}
-		return null;
-	}	
-	
 
-	public List<Users> getAllBackupUsers(){
-		try {
-			//get all users
-			Criteria crit = getSession().createCriteria(Users.class);
-			List<Users> ll = crit.list();
-			
-			return ll;				
+			return ll;
 		} catch (HibernateException ex) {
-			log.error("[getAllUsers] ",ex);
+			log.error("[getAllUsers] ", ex);
 		} catch (Exception ex2) {
-			log.error("[getAllUsers] ",ex2);
-		}
-		return null;
-	}	
-	
-	/**
-	 * returns the maximum
-	 * @return
-	 */
-	public Long selectMaxFromUsers(){
-		try {
-			//get all users
-			Query query = getSession().createQuery("select count(c.user_id) from Users c where c.deleted = 'false'"); 
-			List ll = query.list();
-			log.info((Long)ll.get(0));
-			return (Long)ll.get(0);				
-		} catch (HibernateException ex) {
-			log.error("[selectMaxFromUsers] ",ex);
-		} catch (Exception ex2) {
-			log.error("[selectMaxFromUsers] ",ex2);
+			log.error("[getAllUsers] ", ex2);
 		}
 		return null;
 	}
-	
-	public Long selectMaxFromUsersByOrganization(long organization_id){
+
+	public List<Users> getAllBackupUsers() {
 		try {
-			String hql = "SELECT COUNT(c.user_id) FROM Users c, Organisation_Users ou " +
-							"WHERE c.deleted!=:deleted " +
-							"AND ou.user_id = c.user_id " +
-							"AND ou.organisation.organisation_id = :organisation_id " +
-							"AND ou.deleted!=:deleted " +
-							"GROUP BY c.user_id";
-			//get all users
+			// get all users
+			Criteria crit = getSession().createCriteria(Users.class);
+			List<Users> ll = crit.list();
+
+			return ll;
+		} catch (HibernateException ex) {
+			log.error("[getAllUsers] ", ex);
+		} catch (Exception ex2) {
+			log.error("[getAllUsers] ", ex2);
+		}
+		return null;
+	}
+
+	/**
+	 * returns the maximum
+	 * 
+	 * @return
+	 */
+	public Long selectMaxFromUsers() {
+		try {
+			// get all users
+			Query query = getSession()
+					.createQuery(
+							"select count(c.user_id) from Users c where c.deleted = 'false'");
+			List ll = query.list();
+			log.info(ll.get(0));
+			return (Long) ll.get(0);
+		} catch (HibernateException ex) {
+			log.error("[selectMaxFromUsers] ", ex);
+		} catch (Exception ex2) {
+			log.error("[selectMaxFromUsers] ", ex2);
+		}
+		return null;
+	}
+
+	public Long selectMaxFromUsersByOrganization(long organization_id) {
+		try {
+			String hql = "SELECT COUNT(c.user_id) FROM Users c, Organisation_Users ou "
+					+ "WHERE c.deleted!=:deleted "
+					+ "AND ou.user_id = c.user_id "
+					+ "AND ou.organisation.organisation_id = :organisation_id "
+					+ "AND ou.deleted!=:deleted " + "GROUP BY c.user_id";
+			// get all users
 			Query query = getSession().createQuery(hql);
 			query.setString("deleted", "true");
 			query.setLong("organisation_id", organization_id);
 			List ll = query.list();
-			
-//			for (Iterator it = ll.iterator();it.hasNext();) {
-//				log.debug("it: "+it.next());
-//			}
-			
-			//TODO: For some reason I was un-able to fix, this does not return the number but each row only one time?!
-			
-			return Long.valueOf(""+ll.size()).longValue();				
+
+			// for (Iterator it = ll.iterator();it.hasNext();) {
+			// log.debug("it: "+it.next());
+			// }
+
+			// TODO: For some reason I was un-able to fix, this does not return
+			// the number but each row only one time?!
+
+			return Long.valueOf("" + ll.size()).longValue();
 		} catch (HibernateException ex) {
-			log.error("[selectMaxFromUsersByOrganization] ",ex);
+			log.error("[selectMaxFromUsersByOrganization] ", ex);
 		} catch (Exception ex2) {
-			log.error("[selectMaxFromUsersByOrganization] ",ex2);
+			log.error("[selectMaxFromUsersByOrganization] ", ex2);
 		}
 		return null;
 	}
-	
 
 	/**
 	 * 
@@ -254,74 +260,75 @@ public class UserDaoImpl extends HibernateDaoSupport {
 	public Users getUserById(Long user_id) {
 		if (user_id > 0) {
 			try {
-				
-				log.debug("getUserById: "+user_id);
-				
-				String hql = "select c from Users as c " +
-						"where c.user_id = :user_id";
-				
+
+				log.debug("getUserById: " + user_id);
+
+				String hql = "select c from Users as c "
+						+ "where c.user_id = :user_id";
+
 				Query query = getSession().createQuery(hql);
 				query.setLong("user_id", user_id);
 				Users user = (Users) query.uniqueResult();
-				//session.refresh(user);
-				
-//				if (this.organisationUserDaoImpl == null) {
-//					//Backport cause Spring Injection is not available for all Beans
-//					this.organisationUserDaoImpl = OrganisationUserDaoImpl.getInstance();
-//				}
-				//user.setOrganisation_users(this.organisationUserDaoImpl.getOrganisationsByUsersId(user.getUser_id()));
-				
+				// session.refresh(user);
+
+				// if (this.organisationUserDaoImpl == null) {
+				// //Backport cause Spring Injection is not available for all
+				// Beans
+				// this.organisationUserDaoImpl =
+				// OrganisationUserDaoImpl.getInstance();
+				// }
+				// user.setOrganisation_users(this.organisationUserDaoImpl.getOrganisationsByUsersId(user.getUser_id()));
+
 				return user;
 				// TODO: Add Usergroups to user
 				// users.setUsergroups(ResHandler.getGroupmanagement().getUserGroups(user_id));
 			} catch (HibernateException ex) {
-				log.error("[getUserById]",ex);
+				log.error("[getUserById]", ex);
 			} catch (Exception ex2) {
-				log.error("[getUserById]",ex2);
+				log.error("[getUserById]", ex2);
 			}
 		} else {
-			log.error("[getUser] "+"Error: No USER_ID given");
+			log.error("[getUser] " + "Error: No USER_ID given");
 		}
 		return null;
 	}
-	
+
 	public String getUserPictureUriById(Long user_id) {
 		if (user_id > 0) {
 			try {
-				
-				log.debug("getUserById: "+user_id);
-				
-				String hql = "select c.pictureuri as pictureuri from Users as c " +
-						"where c.user_id = :user_id";
-				
+
+				log.debug("getUserById: " + user_id);
+
+				String hql = "select c.pictureuri as pictureuri from Users as c "
+						+ "where c.user_id = :user_id";
+
 				Query query = getSession().createQuery(hql);
 				query.setLong("user_id", user_id);
 				String pictureuri = (String) query.uniqueResult();
-//				tx.commit();
-//				HibernateUtil.closeSession(idf);
-				
+				// tx.commit();
+				// HibernateUtil.closeSession(idf);
+
 				return pictureuri;
 			} catch (HibernateException ex) {
-				log.error("[getUserPictureUriById]",ex);
+				log.error("[getUserPictureUriById]", ex);
 			} catch (Exception ex2) {
-				log.error("[getUserPictureUriById]",ex2);
+				log.error("[getUserPictureUriById]", ex2);
 			}
 		} else {
-			log.error("[getUserPictureUriById] "+"Error: No USER_ID given");
+			log.error("[getUserPictureUriById] " + "Error: No USER_ID given");
 		}
 		return null;
 	}
-	
-	
+
 	public Users getUserByUserHash(String userHash) {
 		try {
-			String hql = "select c from Users as c " +
-					"where c.userHash = :userHash";
-			
+			String hql = "select c from Users as c "
+					+ "where c.userHash = :userHash";
+
 			Query query = getSession().createQuery(hql);
 			query.setString("userHash", userHash);
 			Users users = (Users) query.uniqueResult();
-			
+
 			return users;
 		} catch (HibernateException ex) {
 			log.error(ex);
@@ -330,22 +337,27 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		}
 		return null;
 	}
-	
+
 	/**
 	 * suche eines Bentzers
+	 * 
 	 * @param user_level
 	 * @param searchstring
 	 * @param max
 	 * @param start
 	 * @return
 	 */
-	public List<Users> searchUser(long user_level, String searchcriteria, String searchstring, int max, int start, String orderby, boolean asc) {
+	public List<Users> searchUser(long user_level, String searchcriteria,
+			String searchstring, int max, int start, String orderby, boolean asc) {
 		if (AuthLevelmanagement.checkAdminLevel(user_level)) {
 			try {
 				Criteria crit = getSession().createCriteria(Users.class);
-				crit.add(Restrictions.ilike(searchcriteria, "%" + searchstring + "%"));
-				if (asc) crit.addOrder(Order.asc(orderby));
-				else crit.addOrder(Order.desc(orderby));
+				crit.add(Restrictions.ilike(searchcriteria, "%" + searchstring
+						+ "%"));
+				if (asc)
+					crit.addOrder(Order.asc(orderby));
+				else
+					crit.addOrder(Order.desc(orderby));
 				crit.add(Restrictions.ne("deleted", "true"));
 				crit.setMaxResults(max);
 				crit.setFirstResult(start);
@@ -359,84 +371,69 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		}
 		return null;
 	}
-	
-	public List<Users> lookUpUser(String searchstring, int max, int start, String orderby, boolean asc) {
+
+	public List<Users> lookUpUser(String searchstring, int max, int start,
+			String orderby, boolean asc) {
 		try {
 			//
-			String hql = "SELECT c from Users c, Adresses_Emails adr_e " +
-					"WHERE c.deleted != :deleted " +
-					"AND " +
-					"(" +
-						"(" +
-							"lower(c.login) LIKE lower(:search) " +
-							"OR lower(c.firstname) LIKE lower(:search) " +
-							"OR lower(c.lastname) LIKE lower(:search)" +
-						") " +
-						"OR " +
-						"(" +
-							"c.adresses.adresses_id = adr_e.adresses_id " +
-							"AND lower(adr_e.mail.email) LIKE lower(:search)" +
-						") " +
-					") " +
-					"GROUP BY c.user_id " +
-					"ORDER BY "+ orderby +" ";
-			
+			String hql = "SELECT c from Users c, Adresses_Emails adr_e "
+					+ "WHERE c.deleted != :deleted " + "AND " + "(" + "("
+					+ "lower(c.login) LIKE lower(:search) "
+					+ "OR lower(c.firstname) LIKE lower(:search) "
+					+ "OR lower(c.lastname) LIKE lower(:search)" + ") " + "OR "
+					+ "(" + "c.adresses.adresses_id = adr_e.adresses_id "
+					+ "AND lower(adr_e.mail.email) LIKE lower(:search)" + ") "
+					+ ") " + "GROUP BY c.user_id " + "ORDER BY " + orderby
+					+ " ";
+
 			if (asc) {
 				hql += "ASC";
 			} else {
 				hql += "DESC";
 			}
-			
+
 			Query query = getSession().createQuery(hql);
 			query.setString("deleted", "true");
-			query.setString("search", "%"+searchstring+"%");
+			query.setString("search", "%" + searchstring + "%");
 			query.setMaxResults(max);
 			query.setFirstResult(start);
 			List<Users> contactsZ = query.list();
 			return contactsZ;
 		} catch (HibernateException ex) {
-			log.error("lookUpUser",ex);
+			log.error("lookUpUser", ex);
 		} catch (Exception ex2) {
-			log.error("lookUpUser",ex2);
+			log.error("lookUpUser", ex2);
 		}
 		return null;
 	}
-	
-	public Long lookUpUserMax(String searchstring, int max, int start, boolean asc) {
+
+	public Long lookUpUserMax(String searchstring, int max, int start,
+			boolean asc) {
 		try {
 			//
-			String hql = "SELECT COUNT(c) from Users c, Adresses_Emails adr_e " +
-					"WHERE c.deleted != :deleted " +
-					"AND " +
-					"(" +
-						"(" +
-							"lower(c.login) LIKE lower(:search) " +
-							"OR lower(c.firstname) LIKE lower(:search) " +
-							"OR lower(c.lastname) LIKE lower(:search)" +
-						") " +
-						"OR " +
-						"(" +
-							"c.adresses.adresses_id = adr_e.adresses_id " +
-							"AND lower(adr_e.mail.email) LIKE lower(:search)" +
-						") " +
-					") " +
-					"GROUP BY c.user_id ";
-			
-			
+			String hql = "SELECT COUNT(c) from Users c, Adresses_Emails adr_e "
+					+ "WHERE c.deleted != :deleted " + "AND " + "(" + "("
+					+ "lower(c.login) LIKE lower(:search) "
+					+ "OR lower(c.firstname) LIKE lower(:search) "
+					+ "OR lower(c.lastname) LIKE lower(:search)" + ") " + "OR "
+					+ "(" + "c.adresses.adresses_id = adr_e.adresses_id "
+					+ "AND lower(adr_e.mail.email) LIKE lower(:search)" + ") "
+					+ ") " + "GROUP BY c.user_id ";
+
 			Query query = getSession().createQuery(hql);
 			query.setString("deleted", "true");
-			query.setString("search", "%"+searchstring+"%");
+			query.setString("search", "%" + searchstring + "%");
 			query.setMaxResults(max);
 			query.setFirstResult(start);
 			List ll = query.list();
-			
-			log.info((Long)ll.get(0));
-			return (Long)ll.get(0);	
-			
+
+			log.info(ll.get(0));
+			return (Long) ll.get(0);
+
 		} catch (HibernateException ex) {
-			log.error("lookUpUserMax",ex);
+			log.error("lookUpUserMax", ex);
 		} catch (Exception ex2) {
-			log.error("lookUpUserMax",ex2);
+			log.error("lookUpUserMax", ex2);
 		}
 		return null;
 	}
@@ -444,7 +441,9 @@ public class UserDaoImpl extends HibernateDaoSupport {
 	public List getUserdataDashBoard(Long user_id) {
 		if (user_id.longValue() > 0) {
 			try {
-				Query query = getSession().createQuery("select c from Userdata as c where c.user_id = :user_id AND deleted != :deleted");
+				Query query = getSession()
+						.createQuery(
+								"select c from Userdata as c where c.user_id = :user_id AND deleted != :deleted");
 				query.setLong("user_id", user_id.longValue());
 				query.setString("deleted", "true");
 				List ll = query.list();
@@ -462,7 +461,9 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		int userdata = 0;
 		if (USER_ID.longValue() > 0) {
 			try {
-				Query query = getSession().createQuery("select c from Userdata as c where c.user_id = :user_id AND c.data_key = :data_key AND deleted != :deleted");
+				Query query = getSession()
+						.createQuery(
+								"select c from Userdata as c where c.user_id = :user_id AND c.data_key = :data_key AND deleted != :deleted");
 				query.setLong("user_id", USER_ID.longValue());
 				query.setString("data_key", DATA_KEY);
 				query.setString("deleted", "true");
@@ -482,7 +483,9 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		Userdata userdata = new Userdata();
 		if (user_id.longValue() > 0) {
 			try {
-				Query query = getSession().createQuery("select c from Userdata as c where c.user_id = :user_id AND c.data_key = :data_key AND deleted != :deleted");
+				Query query = getSession()
+						.createQuery(
+								"select c from Userdata as c where c.user_id = :user_id AND c.data_key = :data_key AND deleted != :deleted");
 				query.setLong("user_id", user_id.longValue());
 				query.setString("data_key", DATA_KEY);
 				query.setString("deleted", "true");
@@ -499,7 +502,7 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		}
 		return userdata;
 	}
-	
+
 	/**
 	 * @author swagner This Methdo adds a User to the User-Table
 	 * @param level_id
@@ -521,10 +524,10 @@ public class UserDaoImpl extends HibernateDaoSupport {
 	 */
 	public Long addUser(long level_id, int availible, int status,
 			String firstname, String login, String lastname, long language_id,
-			String userpass, long adress_id, Date age, Boolean isPending, 
-			Date expireDate, Long maxWorkDays, 
-			Boolean useDefaultDiscounts, Boolean unlimitedLicenses, 
-			Long licenseUserPayed, Long licenseUserUsed, Float pricePerUser) {
+			String userpass, long adress_id, Date age, Boolean isPending,
+			Date expireDate, Long maxWorkDays, Boolean useDefaultDiscounts,
+			Boolean unlimitedLicenses, Long licenseUserPayed,
+			Long licenseUserUsed, Float pricePerUser) {
 		try {
 			Users users = new Users();
 			users.setFirstname(firstname);
@@ -548,7 +551,7 @@ public class UserDaoImpl extends HibernateDaoSupport {
 			users.setLicenseUserPayed(licenseUserPayed);
 			users.setLicenseUserUsed(licenseUserUsed);
 			users.setPricePerUser(pricePerUser);
-			
+
 			// this is needed cause the language is not a needed data at
 			// registering
 			if (language_id != 0) {
@@ -557,42 +560,49 @@ public class UserDaoImpl extends HibernateDaoSupport {
 				users.setLanguage_id(null);
 			}
 			users.setUuid(UUID.randomUUID().toString());
-			users.setPassword(this.manageCryptStyle.getInstanceOfCrypt().createPassPhrase(userpass));
+			users.setPassword(this.manageCryptStyle.getInstanceOfCrypt()
+					.createPassPhrase(userpass));
 			users.setRegdate(new Date());
 			users.setDeleted("false");
-			String cryptHash = " "+ new Date() + "random";
-			users.setUserHash(this.manageCryptStyle.getInstanceOfCrypt().createPassPhrase(cryptHash));
+			String cryptHash = " " + new Date() + "random";
+			users.setUserHash(this.manageCryptStyle.getInstanceOfCrypt()
+					.createPassPhrase(cryptHash));
 
-			Long user_id = (Long) getSession().save(users);
+			Long user_id = (Long) getHibernateTemplate().save(users);
 
 			return user_id;
 
 		} catch (HibernateException ex) {
-			log.error("[addUser]" ,ex);
+			log.error("[addUser]", ex);
 		} catch (Exception ex2) {
-			log.error("[addUser]" ,ex2);
+			log.error("[addUser]", ex2);
 		}
 		return null;
 	}
-	
+
 	public Long addUserNonActivated(long level_id, int availible, int status,
 			String firstname, String login, String lastname, long language_id,
-			String userpass, long adress_id, Date age, String hash, String xmlStringRegObjectObj) {
+			String userpass, long adress_id, Date age, String hash,
+			String xmlStringRegObjectObj) {
 		try {
-			
-        	Integer expireDateMonthsMax = Integer.valueOf(this.configurationmanagement.getConfKey(3, "expireDateMonthsMax").getConf_value()).intValue();
-        	Long timeToExpire = new Long(expireDateMonthsMax) * 30 * 86400000;
-        	Date currentDate = new Date();
-        	Date expireDate = new Date(currentDate.getTime()+timeToExpire);
-        	
-        	Long maxWorkDays = Long.valueOf(this.configurationmanagement.getConfKey(3, "maxWorkDays").getConf_value()).longValue();
-			
+
+			Integer expireDateMonthsMax = Integer.valueOf(
+					this.configurationmanagement.getConfKey(3,
+							"expireDateMonthsMax").getConf_value()).intValue();
+			Long timeToExpire = new Long(expireDateMonthsMax) * 30 * 86400000;
+			Date currentDate = new Date();
+			Date expireDate = new Date(currentDate.getTime() + timeToExpire);
+
+			Long maxWorkDays = Long.valueOf(
+					this.configurationmanagement.getConfKey(3, "maxWorkDays")
+							.getConf_value()).longValue();
+
 			Users users = new Users();
-			
+
 			users.setExpireDate(expireDate);
 			users.setMaxWorkDays(maxWorkDays);
 			users.setIsPending(true);
-			
+
 			users.setFirstname(firstname);
 			users.setLogin(login);
 			users.setLastname(lastname);
@@ -608,12 +618,13 @@ public class UserDaoImpl extends HibernateDaoSupport {
 			users.setActivatehash(hash);
 			users.setXmlStringRegObjectObj(xmlStringRegObjectObj);
 			users.setUuid(UUID.randomUUID().toString());
-			
+
 			users.setUnlimitedLicenses(false);
 			users.setUseDefaultDiscounts(true);
-			
-			String cryptHash = " "+ new Date() + "random";
-			users.setUserHash(this.manageCryptStyle.getInstanceOfCrypt().createPassPhrase(cryptHash));
+
+			String cryptHash = " " + new Date() + "random";
+			users.setUserHash(this.manageCryptStyle.getInstanceOfCrypt()
+					.createPassPhrase(cryptHash));
 			// this is needed cause the language is not a needed data at
 			// registering
 			if (language_id != 0) {
@@ -621,28 +632,29 @@ public class UserDaoImpl extends HibernateDaoSupport {
 			} else {
 				users.setLanguage_id(null);
 			}
-			users.setPassword(this.manageCryptStyle.getInstanceOfCrypt().createPassPhrase(userpass));
+			users.setPassword(this.manageCryptStyle.getInstanceOfCrypt()
+					.createPassPhrase(userpass));
 			users.setRegdate(new Date());
 			users.setDeleted("false");
 
-			Long user_id = (Long) getSession().save(users);
+			Long user_id = (Long) getHibernateTemplate().save(users);
 
 			return user_id;
 
 		} catch (HibernateException ex) {
-			log.error("[registerUser]" ,ex);
+			log.error("[registerUser]", ex);
 		} catch (Exception ex2) {
-			log.error("[registerUser]" ,ex2);
+			log.error("[registerUser]", ex2);
 		}
 		return new Long(-1);
 	}
-	
-	public Long updateUserByProfile(Long user_id, 
-			String firstname, String login, String lastname, Integer title_id,
-			String userpass, long adress_id, Date age, String xmlStringRegObjectObj,
+
+	public Long updateUserByProfile(Long user_id, String firstname,
+			String login, String lastname, Integer title_id, String userpass,
+			long adress_id, Date age, String xmlStringRegObjectObj,
 			Long company_adress_id) {
 		try {
-			
+
 			Users users = this.getUserById(user_id);
 			if (users == null) {
 				return new Long(-1);
@@ -655,186 +667,194 @@ public class UserDaoImpl extends HibernateDaoSupport {
 			users.setPassword(userpass);
 			users.setAdresses(this.addressmanagement.getAdressbyId(adress_id));
 			if (company_adress_id != null) {
-				users.setCompanyAddress(this.addressmanagement.getAdressbyId(company_adress_id));
+				users.setCompanyAddress(this.addressmanagement
+						.getAdressbyId(company_adress_id));
 			} else {
 				users.setCompanyAddress(null);
 			}
 			users.setTitle_id(new Integer(1));
 			users.setUpdatetime(new Date());
 			users.setXmlStringRegObjectObj(xmlStringRegObjectObj);
-			
-			getSession().update(users);
-			
+
+			getHibernateTemplate().update(users);
+
 			return user_id;
-			
+
 		} catch (HibernateException ex) {
-			log.error("[updateUserByProfile]" ,ex);
+			log.error("[updateUserByProfile]", ex);
 		} catch (Exception ex2) {
-			log.error("[updateUserByProfile]" ,ex2);
+			log.error("[updateUserByProfile]", ex2);
 		}
 		return new Long(-1);
 	}
 
 	public Long addUser(Users usr) {
 		try {
-			String cryptHash = " "+ new Date() + "random";
-			usr.setUserHash(this.manageCryptStyle.getInstanceOfCrypt().createPassPhrase(cryptHash));
-			Long user_id = (Long) getSession().save(usr);
+			String cryptHash = " " + new Date() + "random";
+			usr.setUserHash(this.manageCryptStyle.getInstanceOfCrypt()
+					.createPassPhrase(cryptHash));
+			Long user_id = (Long) getHibernateTemplate().save(usr);
 			return user_id;
 		} catch (HibernateException ex) {
-			log.error("[registerUser]" ,ex);
+			log.error("[registerUser]", ex);
 		} catch (Exception ex2) {
-			log.error("[registerUser]" ,ex2);
+			log.error("[registerUser]", ex2);
 		}
 		return null;
 	}
-	
+
 	/**
 	 * check for duplicates
+	 * 
 	 * @param DataValue
 	 * @return
 	 */
 	public boolean checkUserLogin(String DataValue) {
 		try {
-			Query query = getSession().createQuery("select c from Users as c where lower(c.login) = lower(:DataValue) AND deleted != :deleted");
+			Query query = getSession()
+					.createQuery(
+							"select c from Users as c where lower(c.login) = lower(:DataValue) AND deleted != :deleted");
 			query.setString("DataValue", DataValue);
 			query.setString("deleted", "true");
 			int count = query.list().size();
 
 			if (count != 0) {
 				return false;
-			}			
+			}
 		} catch (HibernateException ex) {
-			log.error("[checkUserData]" ,ex);
+			log.error("[checkUserData]", ex);
 		} catch (Exception ex2) {
-			log.error("[checkUserData]" ,ex2);
+			log.error("[checkUserData]", ex2);
 		}
 		return true;
 	}
 
 	public void addUserLevel(String description, int myStatus) {
 		try {
+
 			Userlevel uslevel = new Userlevel();
 			uslevel.setStarttime(new Date());
 			uslevel.setDescription(description);
 			uslevel.setStatuscode(new Integer(myStatus));
 			uslevel.setDeleted("false");
-			getSession().save(uslevel);
+
+			Long newUserLevel = (Long) getHibernateTemplate().save(uslevel);
+
+			Userlevel uLevel = this.getUserLevel(newUserLevel);
+
+			log.debug("newUserLevel" + uLevel.getLevel_id());
 		} catch (HibernateException ex) {
-			log.error("[addUserLevel]" ,ex);
+			log.error("[addUserLevel]", ex);
 		} catch (Exception ex2) {
-			log.error("[addUserLevel]" ,ex2);
+			log.error("[addUserLevel]", ex2);
 		}
 	}
-	
 
 	public Users getUserByName(String login) {
 		try {
-			String hql = "SELECT u FROM Users as u " +
-					" where u.login = :login" +
-					" AND deleted != :deleted";
+			String hql = "SELECT u FROM Users as u "
+					+ " where u.login = :login" + " AND deleted != :deleted";
 			Query query = getSession().createQuery(hql);
 			query.setString("login", login);
 			query.setString("deleted", "true");
 			Users us = (Users) query.uniqueResult();
-			return us;			
+			return us;
 		} catch (Exception e) {
-			log.error("[getUserByName]",e);
+			log.error("[getUserByName]", e);
 		}
 		return null;
 	}
-	
+
 	public List<Users> getUsersByLogin(String login) {
 		try {
-			String hql = "SELECT u FROM Users as u " +
-					" where u.login = :login" +
-					" AND deleted != :deleted";
+			String hql = "SELECT u FROM Users as u "
+					+ " where u.login = :login" + " AND deleted != :deleted";
 			Query query = getSession().createQuery(hql);
 			query.setString("login", login);
 			query.setString("deleted", "true");
 			List<Users> us = query.list();
-			return us;			
+			return us;
 		} catch (Exception e) {
-			log.error("[getUsersByLogin]",e);
+			log.error("[getUsersByLogin]", e);
 		}
 		return null;
 	}
-	
+
 	public List<Users> getAdmins() {
 		try {
-			String hql = "SELECT u FROM Users as u " +
-					" where u.level_id > 2" +
-					" AND deleted != :deleted";
+			String hql = "SELECT u FROM Users as u " + " where u.level_id > 2"
+					+ " AND deleted != :deleted";
 			Query query = getSession().createQuery(hql);
 			query.setString("deleted", "true");
 			List<Users> us = query.list();
-			return us;			
+			return us;
 		} catch (Exception e) {
-			log.error("[getUserByAdressesId]",e);
+			log.error("[getUserByAdressesId]", e);
 		}
 		return null;
 	}
-	
+
 	public Users getUserByAdressesId(Long adresses_id) {
 		try {
-			String hql = "SELECT u FROM Users as u " +
-					" where u.adresses.adresses_id = :adresses_id" +
-					" AND deleted != :deleted";
+			String hql = "SELECT u FROM Users as u "
+					+ " where u.adresses.adresses_id = :adresses_id"
+					+ " AND deleted != :deleted";
 			Query query = getSession().createQuery(hql);
 			query.setLong("adresses_id", adresses_id);
 			query.setString("deleted", "true");
 			Users us = (Users) query.uniqueResult();
-			return us;			
+			return us;
 		} catch (Exception e) {
-			log.error("[getUserByAdressesId]",e);
+			log.error("[getUserByAdressesId]", e);
 		}
 		return null;
 	}
-	
-	public Object getUserByHash (String hash) {
+
+	public Object getUserByHash(String hash) {
 		try {
-			if (hash.length()==0) return new Long(-5);
-			String hql = "SELECT u FROM Users as u " +
-					" where u.resethash = :resethash" +
-					" AND deleted != :deleted";
+			if (hash.length() == 0)
+				return new Long(-5);
+			String hql = "SELECT u FROM Users as u "
+					+ " where u.resethash = :resethash"
+					+ " AND deleted != :deleted";
 			Query query = getSession().createQuery(hql);
 			query.setString("resethash", hash);
 			query.setString("deleted", "true");
 			Users us = (Users) query.uniqueResult();
-			if (us!=null) {
-				return us;		
+			if (us != null) {
+				return us;
 			} else {
 				return new Long(-5);
 			}
 		} catch (Exception e) {
-			log.error("[getUserByHash]",e);
+			log.error("[getUserByHash]", e);
 		}
 		return new Long(-1);
 	}
-	
 
-	public Users getUserByActivationHash (String activatehash) {
+	public Users getUserByActivationHash(String activatehash) {
 		try {
-			String hql = "SELECT u FROM Users as u " +
-					" where u.activatehash = :activatehash" +
-					" AND deleted != :deleted";
+			String hql = "SELECT u FROM Users as u "
+					+ " where u.activatehash = :activatehash"
+					+ " AND deleted != :deleted";
 			Query query = getSession().createQuery(hql);
 			query.setString("activatehash", activatehash);
 			query.setString("deleted", "true");
 			Users us = (Users) query.uniqueResult();
 			return us;
 		} catch (Exception e) {
-			log.error("[getUserByActivationHash]",e);
+			log.error("[getUserByActivationHash]", e);
 		}
 		return null;
 	}
-	
-	public Object resetPassByHash (String hash, String pass) {
+
+	public Object resetPassByHash(String hash, String pass) {
 		try {
 			Object u = this.getUserByHash(hash);
 			if (u instanceof Users) {
 				Users us = (Users) u;
-				us.setPassword(this.manageCryptStyle.getInstanceOfCrypt().createPassPhrase(pass));
+				us.setPassword(this.manageCryptStyle.getInstanceOfCrypt()
+						.createPassPhrase(pass));
 				us.setResethash("");
 				this.updateUser(us);
 				return new Long(-8);
@@ -842,22 +862,22 @@ public class UserDaoImpl extends HibernateDaoSupport {
 				return u;
 			}
 		} catch (Exception e) {
-			log.error("[resetPassByHash]",e);
+			log.error("[resetPassByHash]", e);
 		}
 		return new Long(-1);
 	}
-	
+
 	public void updateUser(Users user) {
 		if (user.getUser_id() > 0) {
 			try {
-				getSession().update(user);
+				getHibernateTemplate().update(user);
 			} catch (HibernateException ex) {
-				log.error("[updateUser] ",ex);
+				log.error("[updateUser] ", ex);
 			} catch (Exception ex2) {
-				log.error("[updateUser] ",ex2);
+				log.error("[updateUser] ", ex2);
 			}
 		} else {
-			log.error("[updateUser] "+"Error: No USER_ID given");
+			log.error("[updateUser] " + "Error: No USER_ID given");
 		}
 	}
 
@@ -866,11 +886,12 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		String res = "Fehler beim Update";
 		try {
 			String hqlUpdate = "update userdata set DATA_KEY= :DATA_KEY, USER_ID = :USER_ID, DATA = :DATA, updatetime = :updatetime, comment = :Comment where DATA_ID= :DATA_ID";
-			int updatedEntities = getSession().createQuery(hqlUpdate).setString(
-					"DATA_KEY", DATA_KEY).setLong("USER_ID", USER_ID)
-					.setString("DATA", DATA).setLong("updatetime",new Long(-1))
-					.setString("Comment", Comment).setInteger("DATA_ID",
-							DATA_ID).executeUpdate();
+			int updatedEntities = getSession().createQuery(hqlUpdate)
+					.setString("DATA_KEY", DATA_KEY)
+					.setLong("USER_ID", USER_ID).setString("DATA", DATA)
+					.setLong("updatetime", new Long(-1))
+					.setString("Comment", Comment)
+					.setInteger("DATA_ID", DATA_ID).executeUpdate();
 			res = "Success" + updatedEntities;
 		} catch (HibernateException ex) {
 			log.error(ex);
@@ -886,10 +907,11 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		try {
 			String hqlUpdate = "update Userdata set data = :data, updatetime = :updatetime, "
 					+ "comment = :comment where user_id= :user_id AND data_key = :data_key";
-			int updatedEntities = getSession().createQuery(hqlUpdate).setString(
-					"data", DATA).setLong("updatetime",
-					new Long(-1)).setString(
-					"comment", Comment).setLong("user_id", USER_ID.longValue())
+			int updatedEntities = getSession().createQuery(hqlUpdate)
+					.setString("data", DATA)
+					.setLong("updatetime", new Long(-1))
+					.setString("comment", Comment)
+					.setLong("user_id", USER_ID.longValue())
 					.setString("data_key", DATA_KEY).executeUpdate();
 			res = "Success" + updatedEntities;
 		} catch (HibernateException ex) {
@@ -904,7 +926,8 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		String res = "Fehler beim deleteUserdata";
 		try {
 			String hqlUpdate = "delete userdata where DATA_ID= :DATA_ID";
-			int updatedEntities = getSession().createQuery(hqlUpdate).setInteger("DATA_ID", DATA_ID).executeUpdate();
+			int updatedEntities = getSession().createQuery(hqlUpdate)
+					.setInteger("DATA_ID", DATA_ID).executeUpdate();
 			res = "Success" + updatedEntities;
 		} catch (HibernateException ex) {
 			log.error(ex);
@@ -918,9 +941,9 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		String res = "Fehler beim deleteUserdataByUserAndKey";
 		try {
 			String hqlUpdate = "delete userdata where users_id= :users_id AND DATA_KEY = :DATA_KEY";
-			int updatedEntities = getSession().createQuery(hqlUpdate).setInteger(
-					"users_id", users_id).setString("DATA_KEY", DATA_KEY)
-					.executeUpdate();
+			int updatedEntities = getSession().createQuery(hqlUpdate)
+					.setInteger("users_id", users_id)
+					.setString("DATA_KEY", DATA_KEY).executeUpdate();
 			res = "Success" + updatedEntities;
 		} catch (HibernateException ex) {
 			log.error(ex);
@@ -942,10 +965,10 @@ public class UserDaoImpl extends HibernateDaoSupport {
 		userdata.setUser_id(new Long(USER_ID));
 		userdata.setDeleted("false");
 		try {
-			getSession().save(userdata);
-//			session.flush();
-//			session.clear();
-//			session.refresh(userdata);
+			getHibernateTemplate().save(userdata);
+			// session.flush();
+			// session.clear();
+			// session.refresh(userdata);
 			ret = "success";
 		} catch (HibernateException ex) {
 			log.error(ex);
@@ -965,7 +988,7 @@ public class UserDaoImpl extends HibernateDaoSupport {
 				// Groupmanagement.getInstance().deleteUserFromAllGroups(new
 				// Long(USER_ID));
 
-				getSession().update(us);
+				getHibernateTemplate().update(us);
 				return us.getUser_id();
 				// result +=
 				// ResHandler.getBestellmanagement().deleteWarenkorbByUserID(USER_ID);
@@ -978,9 +1001,9 @@ public class UserDaoImpl extends HibernateDaoSupport {
 
 			}
 		} catch (HibernateException ex) {
-			log.error("[deleteUserID]" ,ex);
+			log.error("[deleteUserID]", ex);
 		} catch (Exception ex2) {
-			log.error("[deleteUserID]" ,ex2);
+			log.error("[deleteUserID]", ex2);
 		}
 		return null;
 	}
@@ -988,78 +1011,81 @@ public class UserDaoImpl extends HibernateDaoSupport {
 	public Userlevel getUserLevel(Long level_id) {
 		Userlevel userlevel = new Userlevel();
 		try {
-			Query query = getSession().createQuery("select c from Userlevel as c where c.level_id = :level_id AND deleted != :deleted");
+			Query query = getSession()
+					.createQuery(
+							"select c from Userlevel as c where c.level_id = :level_id AND deleted != :deleted");
 			query.setLong("level_id", level_id.longValue());
 			query.setString("deleted", "true");
 			for (Iterator it2 = query.iterate(); it2.hasNext();) {
 				userlevel = (Userlevel) it2.next();
 			}
 		} catch (HibernateException ex) {
-			log.error("[getUserLevel]" ,ex);
+			log.error("[getUserLevel]", ex);
 		} catch (Exception ex2) {
-			log.error("[getUserLevel]" ,ex2);
+			log.error("[getUserLevel]", ex2);
 		}
 		return userlevel;
 	}
-	
+
 	public UserlevelDTO getUserLevelDTO(Long level_id) {
 		UserlevelDTO userleveldto = new UserlevelDTO();
-		Userlevel  userLevel = this.getUserLevel(level_id);
+		Userlevel userLevel = this.getUserLevel(level_id);
 		userleveldto.setLevel_id(userLevel.getLevel_id());
 		return userleveldto;
 	}
 
 	/**
-	 * get user-role
-	 * 1 - user
-	 * 2 - moderator
-	 * 3 - admin
+	 * get user-role 1 - user 2 - moderator 3 - admin
+	 * 
 	 * @param user_id
 	 * @return
 	 */
 	public Long getUserLevelByID(Long user_id) {
-		
+
 		try {
-			if (user_id==null) return new Long(0);
-			//For direct access of linked users
-			if (user_id==-1){
+			if (user_id == null)
+				return new Long(0);
+			// For direct access of linked users
+			if (user_id == -1) {
 				return new Long(1);
 			}
-			
-			Query query = getSession().createQuery("select c from Users as c where c.user_id = :user_id AND deleted <> 'true'");
+
+			Query query = getSession()
+					.createQuery(
+							"select c from Users as c where c.user_id = :user_id AND deleted <> 'true'");
 			query.setLong("user_id", user_id);
 			Users us = (Users) query.uniqueResult();
-			
-			if (us!=null){
+
+			if (us != null) {
 				return us.getLevel_id();
 			}
 		} catch (HibernateException ex) {
-			log.error("[getUserLevelByID]" ,ex);
+			log.error("[getUserLevelByID]", ex);
 		} catch (Exception ex2) {
-			log.error("[getUserLevelByID]" ,ex2);
+			log.error("[getUserLevelByID]", ex2);
 		}
 		return null;
 	}
-	
+
 	public List<Users> getPendingUsersForSendingMail() {
 		try {
-			String hql = "select c from Users as c " +
-						"where c.isPending = :isPending " +
-						"AND deleted != :deleted";
-			
+			String hql = "select c from Users as c "
+					+ "where c.isPending = :isPending "
+					+ "AND deleted != :deleted";
+
 			Query query = getSession().createQuery(hql);
 			query.setBoolean("isPending", true);
 			query.setString("deleted", "true");
 			List<Users> orgList = query.list();
-			
+
 			return orgList;
-			
+
 		} catch (HibernateException ex) {
-			log.error("[getPendingOrganisationsForSendingMail]" ,ex);
+			log.error("[getPendingOrganisationsForSendingMail]", ex);
 		} catch (Exception ex2) {
-			log.error("[getPendingOrganisationsForSendingMail]" ,ex2);
+			log.error("[getPendingOrganisationsForSendingMail]", ex2);
 		}
 		return null;
 	}
-		
+
 }
